# FibrationTrees

./: CMakeLists.txt  README.md  config.yaml
.github/workflows/: c-cpp.yml  pipeline.yml  pipeline.yml.multijobs
data/benchmarks/: 01_01_MultiDisks.yaml  01_02_DroneCoordination.yaml  01_02_MobileRobotNavigation.yaml  01_04_ReedsSheppCars.yaml  01_04_ReedsSheppSimple.yaml  02_01_CubeRobots.yaml  02_02_Drones.yaml  02_04_ReedsSheppCars.yaml  03_01_VerticalMaze.yaml  03_02_MultiRobotVerticalWall.yaml  03_03_MobileManipulators.yaml  03_04_PathVelocityDecomposition.yaml  03_MultiDiskComparison.yaml  example.yaml  test_all_planners.yaml
data/objects/: Twistycool_edit.blend  Twistycool_env.urdf  Twistycool_env2.dae  boilerroom.urdf  hut_05.urdf  maze.urdf  maze_horizontal.urdf  pipe.urdf  sphere.urdf  uploads_files_2883707_warehouse6.urdf  uploads_files_2883707_warehouse6_simple.stl  warehouse.urdf
data/robots/: Twistycool_robot.urdf  car.urdf  car_disk.urdf  dddk_with_joints.urdf  drone.urdf  forklift.urdf  lifttruck.urdf  zeppelin.urdf  zeppelin_inner_sphere.urdf  zeppelin_with_joints.urdf
deprecated/: 03_Manipulators_Prioritization.yaml  04_ReedsSheppCars_Decomposition.yaml.deprecated  04_ReedsSheppCars_None.yaml.deprecated  04_ReedsSheppCars_Prioritization.yaml.deprecated  Config.hpp  Demo1_CreateRobot.cpp  Demo3_1DPathVelocityDecomposition.cpp  Demo4_RealRobotPathVelocityDecomposition.cpp  Demo5_SimplePathVelocityDecomposition.cpp  MakeSpaceInformation.hpp  OmplPath.hpp  Scenario1_MultiDisk.cpp  Scenario3_MultiRobotVerticalWall.cpp  Scenario5_DroneCoordination.cpp  TaskSpaceProjectionRN.cpp.depr  VisualizeZeppelinPath.cpp
examples/: CreateRobot.cpp  EdgeIKVisualization.cpp  Example1_CreateRobot.cpp  InterpolationInTaskSpace.cpp  KukaOmplInterpolation.cpp  KukaProjectionPlanner.cpp  KukaTaskInterpolation.cpp  KukaTaskSpacePlanner.cpp  MultiRobotVerticalWallPlanner.cpp  Scenario1_MultiDisk.cpp  Scenario2_VerticalMaze.cpp  Scenario3_MultiRobotVerticalWall.cpp  Scenario4_MobileManipulators.cpp  Scenario5_DroneCoordination.cpp  VerticalWallPlanner.cpp  VisualizeMultiRobotPath.cpp  VisualizeZeppelinPath.cpp  dart_urdf.cpp  multi_robot.cpp  osg.cpp  task_ik.py
executables/: Demo1_CreateRobot.cpp  Demo2_MultiSphereVisualization.cpp  Demo3_1DPathVelocityDecomposition.cpp  Demo4_RealRobotPathVelocityDecomposition.cpp  Demo4_ThreeRobotProblem.cpp  Demo5_HopfFibration.cpp  Demo5_SimplePathVelocityDecomposition.cpp  FibrationTreesBenchmaker.cpp  FibrationTreesSolver.cpp  HopfFibrationPlanner.cpp  RunAllBenchmarks.cpp  Scenario1_MultiDisk.cpp  Scenario2_VerticalMaze.cpp  Scenario3_MultiRobotVerticalWall.cpp  Scenario4_MobileManipulators.cpp  Scenario5_DroneCoordination.cpp  Scenario6_PathVelocityDecomposition.cpp
inc/: CollisionChecker.hpp  CollisionCheckerHelper.hpp  Common.hpp  Config.hpp  DartEventHandler.hpp  DartHelper.hpp  EigenPath.hpp  FibrationTreesSolverExecuter.hpp  FilePath.hpp  KinematicsSolver.hpp  MakeSpaceInformation.hpp  OmplHelper.hpp  PinocchioInterface.hpp  ProgramOptions.hpp  RobotEnvironment.hpp  RunBenchmark.hpp  State.hpp  TaskSpace.hpp  TaskSpaceGoal.hpp  TaskSpaceMobile.hpp  TaskSpaceMotionValidator.hpp  TaskSpaceMultiRobotMotionValidator.hpp  TaskSpaceProjection.hpp  TaskStateSpace.hpp  TimeGoal.hpp  TimeOrSolutionTerminationCondition.hpp  ToString.hpp  TranslationTaskSpaceMotionValidator.hpp  Utils.hpp  Visualizer.hpp
inc/gui/: DartEventHandler.hpp  PathReplayEventHandler.hpp  PathReplayWorldNode.hpp  TextWidget.hpp  Visualizer.hpp
inc/input/: FibrationTreesBenchmakerArguments.hpp  FibrationTreesBenchmakerExecuter.hpp  FibrationTreesSolverArguments.hpp  FibrationTreesSolverExecuter.hpp
inc/planners/: DiscreteRRT.hpp  SingleRobotPRM.hpp
inc/projections/: HopfFibration.hpp  HopfFibrationProjection.hpp  ProjectionTaskSpace.hpp  TaskSpaceProjection.hpp
inc/robots/: CubeRobot.hpp  DiskRobot.hpp  Drone.hpp  EuclideanRobot.hpp  KukaRobot.hpp  KukaRobotTaskSpace.hpp  KukaSkeleton.hpp  LiftTruckRobot.hpp  MobileCar.hpp  MobileCarDisk.hpp  MobileCarForklift.hpp  MobileKukaBase.hpp  MobileKukaRobot.hpp  MobileKukaRobotTaskSpace.hpp  MultiRobot.hpp  MultiRobotDiskEnvironment.hpp  Robot.hpp  RobotFactory.hpp  SE2Robot.hpp  SE3Robot.hpp  SphereRobot.hpp  TimeBasedMobileKukaBase.hpp  TimeBasedMobileKukaRobotTaskSpace.hpp  TimeBasedMobileKukaRobotTaskSpaceWithDynamicalConstraints.hpp  TimeBasedSphereRobot.hpp  ZeppelinInnerSphereRobot.hpp  (+1 more)
scripts/: DiscreteRRTOracle.py  HopfFibrationVisualizer.py  HopfFibrationVisualizerChatGPT.py  HopfFibrationVisualizerClaude.py  HopfFibrationVisualizerGrok1.py  HopfFibrationVisualizerGrok2.py  HopfFibrationVisualizerGrok3.py  HopfFibrationVisualizerGrok4.py  Paper_plot_fibration_types.py  Paper_plot_fibration_types_parallel.py  Paper_plot_fibration_types_partial_robot.py  Paper_plot_fibration_types_partial_torus.py  Paper_plot_fibration_types_sequential.py  PlotBenchmarkLogFile.sh  PlotHopfFibrationGrok.py  PlotHopfFibrationSearchTree.py  RunBenchmark.sh  Scenario1_plot_disks.py  Scenario6_test.py
src/: CollisionChecker.cpp  CollisionCheckerHelper.cpp  Common.cpp  DartEventHandler.cpp  DartHelper.cpp  EigenPath.cpp  FibrationTreesSolverExecuter.cpp  FilePath.cpp  KinematicsSolver.cpp  OmplHelper.cpp  OmplPath.cpp  PinocchioInterface.cpp  ProgramOptions.cpp  RunBenchmark.cpp  State.cpp  TaskSpace.cpp  TaskSpaceGoal.cpp  TaskSpaceMobile.cpp  TaskSpaceMotionValidator.cpp  TaskSpaceMultiRobotMotionValidator.cpp  TaskSpaceProjection.cpp  TaskStateSpace.cpp  TimeGoal.cpp  ToString.cpp  TranslationTaskSpaceMotionValidator.cpp  Visualizer.cpp
tests/: BenchmarkLoaderTest.cpp  DartLoaderTest.cpp  EigenPathTest.cpp  FibrationTreesSolverTest.cpp  HopfFibrationTest.cpp  KinematicsSolverTest.cpp  MotionValidatorTest.cpp  MultiRobotCollisionCheckingTest.cpp  MultiRobotLoadingTest.cpp  MultiRobotMotionValidatorTest.cpp  PathReplayWorldNodeTest.cpp  PlannerTest.cpp  RobotLoaderTest.cpp  ScenarioLoaderTest.cpp  TimeBasedPlanning.cpp  TimeBasedPlanningKuka.cpp  TimeBasedPlanningKukaTest.cpp  TimeBasedPlanningTest.cpp  YamlTest.cpp
(+214 files in other folders)
