CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
PROJECT(FibrationTrees VERSION 0.1)

execute_process(COMMAND whoami OUTPUT_VARIABLE current_user OUTPUT_STRIP_TRAILING_WHITESPACE)
MESSAGE("USER: ${current_user}")

ENABLE_TESTING()

################################################################################
## DEBUG BUILD
SET(CMAKE_CXX_FLAGS "-g")
################################################################################
INCLUDE(GoogleTest)

FIND_PACKAGE(yaml-cpp)
SET(DEPENDENCIES ${DEPENDENCIES} YAML_CPP)

FIND_PACKAGE(ompl 1.6.0 REQUIRED)
SET(DEPENDENCIES ${DEPENDENCIES} OMPL)

FIND_PACKAGE(DART 6.12.1 REQUIRED COMPONENTS gui-osg utils utils-urdf collision-bullet)
SET(DEPENDENCIES ${DEPENDENCIES} DART)

SET(DART_LIBRARIES ${DART_LIBRARIES})
LIST(REMOVE_DUPLICATES DART_LIBRARIES)

FOREACH(DEPENDENCY ${DEPENDENCIES})
  MESSAGE("-- ${DEPENDENCY}")
  MESSAGE("VERSION   :  ${${DEPENDENCY}_VERSION}")
  MESSAGE("LIBRARIES :  ${${DEPENDENCY}_LIBRARIES}")
  MESSAGE("LIBS      :  ${${DEPENDENCY}_LIBS}")
  MESSAGE("INCLUDE   :  ${${DEPENDENCY}_INCLUDE_DIRS} ${${DEPENDENCY}_INCLUDE_DIR}")
  INCLUDE_DIRECTORIES(SYSTEM ${${DEPENDENCY}_INCLUDE_DIRS})
  INCLUDE_DIRECTORIES(SYSTEM ${${DEPENDENCY}_INCLUDE_DIR})
  ADD_DEFINITIONS(${${DEPENDENCY}_DEFINITIONS})
ENDFOREACH(DEPENDENCY)

INCLUDE_DIRECTORIES(SYSTEM inc)

FOREACH(SOURCETYPE cpp hpp)
  FILE(GLOB_RECURSE SUBDIR_SRC src/*.${SOURCETYPE})
  SET(SOURCE_FILES ${SOURCE_FILES} ${SUBDIR_SRC})
ENDFOREACH(SOURCETYPE)

ADD_LIBRARY(FibrationTrees STATIC ${SOURCE_FILES})
FOREACH(DEPENDENCY ${DEPENDENCIES})
  TARGET_LINK_LIBRARIES(FibrationTrees ${${DEPENDENCY}_LIBRARIES})
ENDFOREACH(DEPENDENCY)

################################################################################
# Build executables
################################################################################
FILE(GLOB EXECUTABLES_SOURCES executables/*.cpp)
LIST(SORT EXECUTABLES_SOURCES)
FOREACH(EXEC_FILENAME ${EXECUTABLES_SOURCES})
  GET_FILENAME_COMPONENT(EXEC ${EXEC_FILENAME} NAME_WE)
  MESSAGE("-- Add Executable ${EXEC}")
  ADD_EXECUTABLE(${EXEC} ${EXEC_FILENAME})
  TARGET_LINK_LIBRARIES(${EXEC} FibrationTrees)
ENDFOREACH(EXEC_FILENAME)

################################################################################
# Build tests
################################################################################
FILE(GLOB TEST_SOURCES tests/*.cpp)
LIST(SORT TEST_SOURCES)

FOREACH(EXEC_FILENAME ${TEST_SOURCES})
  GET_FILENAME_COMPONENT(EXEC ${EXEC_FILENAME} NAME_WE)
  MESSAGE("-- Add test ${EXEC}")
  ADD_EXECUTABLE(${EXEC} ${EXEC_FILENAME})
  GTEST_ADD_TESTS(TARGET ${EXEC})
  TARGET_LINK_LIBRARIES(${EXEC} gtest gtest_main FibrationTrees)
ENDFOREACH(EXEC_FILENAME)

SET_TESTS_PROPERTIES(${noArgsTests} PROPERTIES TIMEOUT 10)


